joshifest-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sensational-sensors
spec:
  hosts:
  - sensational-sensors
  http:
  - route:
    - destination:
        host: sensational-sensors
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: real-fake-sensors
spec:
  hosts:
  - real-fake-sensors
  http:
  - route:
    - destination:
        host: real-fake-sensors
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
  - api
  http:
  - match:
      - port: 8080
    route:
    - destination:
        host: api
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - "*"
  gateways:
  - iot-system-prototype-app-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: app
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: iot-system-prototype-app-gateway
  # namespace: iot-system-pt
spec:
  selector:
    # https://github.com/istio/istio/issues/29680#issuecomment-1472894785
    istio: ingress # we use helm to deploy the istio-ingress gateway server, this is the selector that helm establishes. This differs from the default `ingressgateway` frequently found in the Istio documentation.
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
