manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/iot-system-prototype-default: "true"
        io.kompose.service: api
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - env:
            - name: ENVIRONMENT
              value: prod
          image: ghcr.io/button-inc/iot-system-prototype/api:latest
          name: api
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "5m"
              memory: "8Mi"
            limits:
              cpu: "10m"
              memory: "32Mi"
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: api
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/iot-system-prototype-default: "true"
        io.kompose.service: app
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - env:
            - name: NEXT_PUBLIC_API_HOST
              value: http://api:8080
          image: ghcr.io/button-inc/iot-system-prototype/app:latest
          name: app
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "5m"
              memory: "8Mi"
            limits:
              cpu: "10m"
              memory: "64Mi"
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: app
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: iot-system-prototype-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/iot-system-prototype-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/iot-system-prototype-default: "true"

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: real-fake-sensors
  name: real-fake-sensors
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: real-fake-sensors
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: real-fake-sensors
  name: real-fake-sensors
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: real-fake-sensors
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/iot-system-prototype-default: "true"
        io.kompose.service: real-fake-sensors
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - image: ghcr.io/button-inc/iot-system-prototype/real_fake_sensors:latest
          name: real-fake-sensors
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "5m"
              memory: "8Mi"
            limits:
              cpu: "10m"
              memory: "32Mi"
      restartPolicy: Always
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sensational-sensors
  name: sensational-sensors
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sensational-sensors
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/iot-system-prototype-default: "true"
        io.kompose.service: sensational-sensors
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - image: ghcr.io/button-inc/iot-system-prototype/sensational_sensors:latest
          name: sensational-sensors
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "5m"
              memory: "8Mi"
            limits:
              cpu: "10m"
              memory: "32Mi"
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sensational-sensors
  name: sensational-sensors
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: sensational-sensors
status: {}
